--- a/resources/main-style.css
+++ b/resources/main-style.css
@@ -229,3 +229,28 @@ span.bigger {
 input#shareinput {
 	width: 15em;
 }
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color: Transparent;
+  color: #faac53;
+  cursor: pointer;
+  padding: 3px;
+  width: 450px;
+  text-align: center;
+  border: none;
+  outline: none;
+  transition: 0s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: Transparent;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+}
